# KIII_Project_FastAPI

./: .env  Dockerfile  README.md  deploy-manifests.sh  docker-compose.yml  init.sql  pyproject.toml  requirements.txt
.github/workflows/: docker-push-publish.yml
app/: crud.py  database.py  main.py  models.py  schemas.py
app/static/: create_game.html  frontend.js  index.html  styles.css
database/base/1/: 1259  2619  2619_vm  2696  2840  2841  pg_internal.init
database/base/5/: 1247  1249  1259  16384  16385  16390  16391  2224  2579  2604  2606  2608  2610  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2703  2704  3455  5002  pg_internal.init
database/global/: 1260  pg_control  pg_internal.init
database/pg_stat/: pgstat.stat
kubernetes/: app-deployment.yaml  app-service.yaml  database-postgres.yaml  fastapi-config.yaml  fastapi-secret.yaml  gaming-app-deployment.yaml  gaming-app-ingress.yaml  ingress-nginx.yaml  ingress-traefik.yaml  namespace.yaml  postgres-configmap.yaml  postgres-pvc.yaml  postgres-secret.yaml  postgres-service.yaml  postgres-statefulset.yaml  static-files-pvc.yaml
kubernetes/merged/: database-postgres.yaml
