[tool.poetry]
name = "gaming crud app - kiii"
version = "0.1.0"
description = "This is a simple CRUD App using FastAPI for KIII Project"
authors = ["Teodor Angeleski 211080"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
SQLAlchemy = "^2.0.30"
psycopg2-binary = "^2.9.9"
pydantic = "^2.7.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"